--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
         <tr><td><a href="https://ctwellthify.github.io/#home" target="_blank">Books</a></td></tr>
         <tr><td><a href="https://ctpersonaldomain.github.io/" target="_blank">Photos</a></td></tr>
         <tr><td><a href="https://youtube.com/@chengappathumisi147" target="_blank">Videos</a></td></tr>
-        <tr><td><a href="#">Documents</a></td></tr>
-        <tr><td><a href="#">Research</a></td></tr>
-        <tr><td><a href="#">Publications</a></td></tr>
-        <tr><td><a href="#">Awards</a></td></tr>
-        <tr><td><a href="#">Conferences</a></td></tr>
+        <tr><td><a href="https://digitalct.github.io/">Documents</a></td></tr>
+        <tr><td><a href="https://digitalct.github.io/">Research</a></td></tr>
+        <tr><td><a href="https://digitalct.github.io/">Publications</a></td></tr>
+        <tr><td><a href="https://digitalct.github.io/">Awards</a></td></tr>
+        <tr><td><a href="https://digitalct.github.io/">Conferences</a></td></tr>
       </table>
     </div>
 
@@ -83,7 +83,7 @@
     <div class="section">
       <h2>About</h2>
       <p>
-        Scientist with interests in physics, research instrumentation,
+        Interested in physics, research instrumentation,
         education, and interdisciplinary learning.
       </p>
 
