--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <tr><td><a href="https://digitalct.github.io/">Publications</a></td></tr>
         <tr><td><a href="https://digitalct.github.io/">Awards</a></td></tr>
         <tr><td><a href="https://digitalct.github.io/">Conferences</a></td></tr>
+        <tr><td><a href="https://digitalct.github.io/">Useful Links</a></td></tr>
       </table>
     </div>
 
@@ -100,10 +101,10 @@
     <div class="section">
       <h2>Updates</h2>
       <ul>
-        <li>📌 Ongoing research projects</li>
-        <li>📘 Book writing in progress</li>
-        <li>🎤 Conference participation</li>
-        <li>🎥 Educational videos on YouTube</li>
+        <li> Ongoing research projects</li>
+        <li>Book writing in progress</li>
+        <li>Conference participation</li>
+        <li>Educational videos on YouTube</li>
       </ul>
     </div>
 
