--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <img src="images/CT.jpeg" alt="T. Chengappa" width="220" height="220">
           </td>
           <td>
-            <a href="https://samuract.github.io" target="_blank">Personal Website</a>
+            <a href="https://digitalct.github.io" target="_blank">Personal Website</a>
           </td>
         </tr>
 
