--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 
       <h3>Areas of Interest</h3>
       <ul>
-        <li>Experimental Physics</li>
-        <li>Laboratory Management</li>
-        <li>Scientific Writing</li>
-        <li>Technology & Education</li>
+        <li>Developing next-generation magnetic sensors to detect extremely weak biological magnetic fields</li>
+        <li>Using magnetic nanoparticles as probes to measure biological forces, transport, and dynamics</li>
+        <li>Building or improving magnetic tweezers to study DNA, RNA, proteins</li>
+        <li>Developing magnetic biosensors for diagnostics</li>
       </ul>
     </div>
 
