--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
         <li>Using magnetic nanoparticles as probes to measure biological forces, transport, and dynamics</li>
         <li>Building or improving magnetic tweezers to study DNA, RNA, proteins</li>
         <li>Developing magnetic biosensors for diagnostics</li>
+         <li>Magnetic Particle Imaging (MPI) – Emerging Imaging Modality</li>
+<li>Magnetic control of neural activity (Magnetogenetics / Neuromodulation)</li>
+        
+        
       </ul>
     </div>
 
