--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
       <h2>Acknowledgements</h2>
       <h3>The Technical Support ackowledged by:</h3>
       <ul>
-        <https://www.biorxiv.org/content/10.1101/2025.08.04.668593v1.full">Research</a>
-        
+        <">Research</a>
         <li> Ongoing research projects</li>
         <li>Book writing in progress</li>
         <li>Conference participation</li>
