--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>T. Chengappa</title>
+  <title>CT Digital World</title>
 
   <style>
     body {
