--- a/index.html
+++ b/index.html
@@ -102,10 +102,9 @@
 
     <!-- Section 3 : Updates / News -->
     <div class="section">
-      <h2>Acknowledgements</h2>
-      <h3>The Technical Support ackowledged by:</h3>
+      <h2>Updates</h2>
+      <h3>New projects</h3>
       <ul>
-        <">Research</a>
         <li> Ongoing research projects</li>
         <li>Book writing in progress</li>
         <li>Conference participation</li>
