--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 
       <h3>Areas of Interest</h3>
       <ul>
-        <li>Developing next-generation magnetic sensors to detect extremely weak biological magnetic fields</li>
-        <li>Using magnetic nanoparticles as probes to measure biological forces, transport, and dynamics</li>
+        <li>Developing the MOKE Experimental Setup</li>
+        <li>Preparation of sharp tips by chemical processes</li>
         <li>Building or improving magnetic tweezers to study DNA, RNA, proteins</li>
         <li>Developing magnetic biosensors for diagnostics</li>
          <li>Magnetic Particle Imaging (MPI) – Emerging Imaging Modality</li>
