--- a/index.html
+++ b/index.html
@@ -1,124 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>CT Digital </title>
-
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 20px;
-    }
-
-    h1 {
-      margin-bottom: 20px;
-    }
-
-    .container {
-      display: flex;
-      gap: 20px;
-    }
-
-    .section {
-      flex: 1;
-      background-color: #eeeeee;
-      padding: 20px;
-      border-radius: 12px;
-    }
-
-    table {
-      border-collapse: collapse;
-    }
-
-    img {
-      border-radius: 8px;
-    }
-
-    footer {
-      margin-top: 30px;
-      font-size: 14px;
-      color: #555;
-    }
-  </style>
+<title>CT</title>
 </head>
-
 <body>
 
-  <h1>T. Chengappa</h1>
-
-  <div class="container">
-
-    <!-- Section 1 : Profile -->
-    <div class="section">
-      <table cellpadding="8">
-        <tr>
-          <td rowspan="10">
-            <img src="images/CT.jpeg" alt="T. Chengappa" width="220" height="220">
-          </td>
-          <td>
-            <a href="https://digitalct.github.io" target="_blank">Personal Website</a>
-          </td>
-        </tr>
-
-        <tr>
-          <td>
-            <a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=drive_link" target="_blank">
-              Brief Curriculum Vitae
-            </a>
-          </td>
-        </tr>
-
-        <tr><td><a href="https://ctwellthify.github.io/#home" target="_blank">Books</a></td></tr>
-        <tr><td><a href="https://ctpersonaldomain.github.io/" target="_blank">Photos</a></td></tr>
-        <tr><td><a href="https://youtube.com/@chengappathumisi147" target="_blank">Videos</a></td></tr>
-        <tr><td><a href="https://digitalct.github.io/">Documents</a></td></tr>
-        <tr><td><a href="https://digitalct.github.io/">Research</a></td></tr>
-        <tr><td><a href="https://digitalct.github.io/">Publications</a></td></tr>
-        <tr><td><a href="https://digitalct.github.io/">Awards</a></td></tr>
-        <tr><td><a href="https://digitalct.github.io/">Conferences</a></td></tr>
-        </table>
-    </div>
-
-    <!-- Section 2 : About / Bio -->
-    <div class="section">
-      <h2>About</h2>
-      <p>
-        Interested in physics, research instrumentation,
-        education, and interdisciplinary learning.
-      </p>
-
-      <h3>Areas of Interest</h3>
-      <ul>
-        <li>Developing the MOKE Experimental Setup</li>
-        <li>Preparation of sharp tips by chemical processes</li>
-        <li>Building or improving magnetic tweezers to study DNA, RNA, proteins</li>
-        <li>Developing magnetic biosensors for diagnostics</li>
-         <li>Magnetic Particle Imaging (MPI) – Emerging Imaging Modality</li>
-<li>Magnetic control of neural activity (Magnetogenetics / Neuromodulation)</li>
-        
-        
-      </ul>
-    </div>
-
-    <!-- Section 3 : Updates / News -->
-    <div class="section">
-      <h2>Updates</h2>
-      <h3>New projects</h3>
-      <ul>
-        <li> Ongoing research projects</li>
-        <li>Book writing in progress</li>
-        <li>Conference participation</li>
-        <li>Educational videos on YouTube</li>
-      </ul>
-    </div>
-
-  </div>
-
-  <footer>
-    © 2025 Created by GCS
-  </footer>
+<h1>Chengappa Thumisi</h1>
+<p>Indian Institute of Technology hyderabad</p>
 
 </body>
 </html>
-
-
