--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <title>CT</title>
 </head>
 <body>
-
+  <img src="images/CT2026.jpg" alt="CT" style="width:500px;height:600px;">
 <h1>Chengappa Thumisi</h1>
-<p>Indian Institute of Technology hyderabad</p>
+
 
 </body>
 </html>
