--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>CT</title>
 </head>
 <body>
-  <img src="images/CT2026.jpg" alt="CT" style="width:500px;height:600px;">
+  <img src="images/CT2026.jpeg" alt="CT" style="width:500px;height:600px;">
 <h1>Chengappa Thumisi</h1>
 
 
