--- a/index.html
+++ b/index.html
@@ -86,28 +86,9 @@
     </section>
 
     <section>
-      <h2>Research Interests</h2>
-      <ul>
-        <li>Magneto-Optic Kerr Effect (MOKE)</li>
-        <li>Nanomagnetism & Spintronics</li>
-        <li>Low-cost Scientific Instrumentation</li>
-        <li>Physics-based Healthcare Applications</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Projects</h2>
-      <ul>
-        <li>DIY MOKE Microscope</li>
-        <li>IoT-based Lab Safety Monitoring System</li>
-        <li>3D-Printed Scientific Accessories</li>
-      </ul>
-    </section>
-
-    <section>
       <h2>Contact</h2>
       <p>
-        Email: <a href="mailto:yourname@email.com">yourname@email.com</a><br />
+        Email: <a href="mailto:chengappa.thumisi@gmail.com">chengappa.thumisi@gmail.com</a><br />
         LinkedIn: <a href="#">linkedin.com/in/yourprofile</a>
       </p>
     </section>
