--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
       <h2>Contact</h2>
       <p>
         Email: <a href="mailto:chengappa.thumisi@gmail.com">chengappa.thumisi@gmail.com</a><br />
-        LinkedIn: <a href="#">linkedin.com/in/yourprofile</a>
+        LinkedIn: <a href="https://www.linkedin.com/in/chengappa-thumisi-908306bb/">chengappa-thumisi-908306bb</a>
       </p>
     </section>
 
     <footer>
-      <p>&copy; 2026 Raj. All rights reserved.</p>
+      <p>&copy; Created by GCS</p>
     </footer>
   </div>
 </body>
