--- a/index.html
+++ b/index.html
@@ -1,101 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CT-Digital World</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: "Georgia", "Times New Roman", serif;
-      background: #ffffff;
-      color: #222;
-      line-height: 1.6;
-    }
-
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 60px 30px;
-    }
-
-    header {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-
-    header h1 {
-      font-size: 3rem;
-      margin-bottom: 10px;
-      letter-spacing: 1px;
-    }
-
-    header p {
-      font-size: 1.1rem;
-      color: #555;
-    }
-
-    section {
-      margin-bottom: 50px;
-    }
-
-    section h2 {
-      font-size: 1.6rem;
-      border-bottom: 1px solid #ddd;
-      padding-bottom: 8px;
-      margin-bottom: 20px;
-    }
-
-    ul {
-      list-style-type: square;
-      padding-left: 20px;
-    }
-
-    a {
-      color: #000;
-      text-decoration: none;
-      border-bottom: 1px dotted #000;
-    }
-
-    a:hover {
-      border-bottom: 1px solid #000;
-    }
-
-    footer {
-      text-align: center;
-      font-size: 0.9rem;
-      color: #777;
-      margin-top: 80px;
-    }
-  </style>
+<title>T. Chengappa</title>
 </head>
-<body>
-  <div class="container">
-    <header>
-      <h1>CHENGAPPA THUMISI</h1>
-      <p>Senior Technical Superintendent | Department of Physics | IIT Hyderabad</p>
-    </header>
+<h1>T. Chengappa</h1>
+<hr>
+<p>
+<table>
+<td> <img height=120 src="CT.jpg"> </td>
+<td>
+<l>Research Interests:<l>
+<p>
+<ul>
+<li>Nanotechnology
+<li>Quantum Materials
+<li>Applied Optics
+<li>Magnetism in Bio Materials 
+<li>Instrumentation
+</ul>
+</td>
+</table>
+<p>
+<hr>
+<p>
+<i>Email:</i> chengappa.thumisi@phy.iith.ac.in
+<p>
+<i>Office Phone:</i> +91-40-2301-6900
+<p>
+<i>Office Address:</i> PH-108, I Floor,Department of Physics, IIT Hyderabad, Kandi, Sangareddy-502284 
+<p>
+<hr>
+<p>
+<a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=sharing">My current CV</a>
+<p>
+<a href="https://ctwellthify.github.io/">Books</a>
 
-    <section>
-      <h2>About Me</h2>
-      <p>
-        I am a Senior Technical Staff with a strong interest in experimental physics, magnetism,
-        and instrumentation development. I am working on building low-cost research setups
-        and exploring interdisciplinary applications of physics.
-      </p>
-    </section>
+<hr>
+<p>
+<i>Last modified:</i> 21th January, 2026
 
-    <section>
-      <h2>Contact</h2>
-      <p>
-        Email: <a href="mailto:chengappa.thumisi@gmail.com">chengappa.thumisi@gmail.com</a><br />
-        LinkedIn: <a href="https://www.linkedin.com/in/chengappa-thumisi-908306bb/">chengappa-thumisi-908306bb</a>
-      </p>
-    </section>
-
-    <footer>
-      <p>&copy; Created by GCS</p>
-    </footer>
-  </div>
-</body>
-</html>
