--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <l>Research Interests:<l>
 <p>
 <ul>
-<li>Nanotechnology
+<li>Quantum Computing
 <li>Quantum Materials
 <li>Applied Optics
 <li>Magnetism in Bio Materials 
