--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <hr>
 <p>
 <table>
-<td> <img height=120 src="images/photograph(1).jpg.jpg"> </td>
+<td> <img height=120 src="images/ct.jpg"> </td>
 <td>
 <l>Research Interests:<l>
 <p>
