--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <table>
 <td> <img height=120 src="images/CT.jpeg"> </td>
 <td>
-<l>Research Interests:<l>
+<l><b>Research Interests:</b><l>
 <p>
 <ul>
 <li>Quantum Computing
