--- a/index.html
+++ b/index.html
@@ -8,15 +8,10 @@
 <table>
 <td> <img height=120 src="images/CT.jpeg"> </td>
 <td>
-<l><b>Research Interests:</b><l>
-<p>
-<ul>
-<li>Quantum Computing
-<li>Quantum Materials
-<li>Applied Optics
-<li>Magnetism in Bio Materials 
-<li>Instrumentation
-</ul>
+<l><b>Contact details</b><l>
+<p>Senior Technical Superintendent </p>
+<p>Department of Physics </p>
+
 </td>
 </table>
 <p>
