--- a/index.html
+++ b/index.html
@@ -1,34 +1,236 @@
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>T. Chengappa</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>T. Chengappa | Senior Technical Superintendent, IIT Hyderabad</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --primary: #0d2b4f;
+      --secondary: #1e3a6d;
+      --accent: #00aaff;
+      --light: #f0f4f8;
+      --dark-text: #0f1e3a;
+      --muted: #5a7a9e;
+      --shadow: 0 12px 40px rgba(13, 43, 79, 0.12);
+      --transition: all 0.35s cubic-bezier(0.25, 0.8, 0.25, 1);
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Roboto', sans-serif;
+      background: linear-gradient(145deg, #e6f0fa 0%, #d9e8f5 100%);
+      color: var(--dark-text);
+      line-height: 1.8;
+      min-height: 100vh;
+      padding: 4rem 1.5rem;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+      background: white;
+      border-radius: 24px;
+      overflow: hidden;
+      box-shadow: var(--shadow);
+      position: relative;
+    }
+
+    .hero {
+      background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
+      color: white;
+      text-align: center;
+      padding: 6rem 2rem 4rem;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .hero::before {
+      content: '';
+      position: absolute;
+      top: -50%; left: -50%; right: -50%; bottom: -50%;
+      background: radial-gradient(circle, rgba(255,255,255,0.12) 0%, transparent 60%);
+      pointer-events: none;
+    }
+
+    h1 {
+      font-family: 'Cinzel', serif;
+      font-size: 4.2rem;
+      letter-spacing: -1.5px;
+      margin-bottom: 0.8rem;
+      text-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    }
+
+    .role {
+      font-size: 1.6rem;
+      font-weight: 500;
+      opacity: 0.95;
+      margin-bottom: 0.4rem;
+    }
+
+    .dept {
+      font-size: 1.3rem;
+      opacity: 0.85;
+      font-style: italic;
+    }
+
+    .avatar-wrapper {
+      position: absolute;
+      bottom: -70px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 10;
+    }
+
+    .avatar {
+      width: 180px;
+      height: 180px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 8px solid white;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+      background: #e0e0e0;
+      transition: var(--transition);
+    }
+
+    .avatar:hover {
+      transform: scale(1.08);
+    }
+
+    .content {
+      padding: 5rem 3rem 3rem;
+      text-align: center;
+    }
+
+    .info-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 2.5rem;
+      margin: 3rem 0;
+    }
+
+    .info-item {
+      background: var(--light);
+      padding: 2rem;
+      border-radius: 16px;
+      box-shadow: 0 6px 20px rgba(13,43,79,0.08);
+      transition: var(--transition);
+    }
+
+    .info-item:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 12px 30px rgba(13,43,79,0.14);
+    }
+
+    .info-item strong {
+      display: block;
+      font-size: 1.2rem;
+      color: var(--primary);
+      margin-bottom: 0.8rem;
+      font-weight: 700;
+    }
+
+    .info-item p {
+      font-size: 1.1rem;
+      color: var(--muted);
+    }
+
+    .actions {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1.8rem;
+      margin: 4rem 0 3rem;
+    }
+
+    .btn {
+      display: inline-flex;
+      align-items: center;
+      padding: 1rem 2.5rem;
+      font-size: 1.15rem;
+      font-weight: 600;
+      text-decoration: none;
+      border-radius: 50px;
+      transition: var(--transition);
+      box-shadow: 0 6px 20px rgba(0,170,255,0.25);
+    }
+
+    .btn-cv {
+      background: linear-gradient(90deg, #00aaff, #007acc);
+      color: white;
+    }
+
+    .btn-books {
+      background: linear-gradient(90deg, #28a745, #1e7e34);
+      color: white;
+    }
+
+    .btn:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 12px 30px rgba(0,170,255,0.35);
+    }
+
+    .footer {
+      background: #f8f9fb;
+      padding: 2rem;
+      text-align: center;
+      color: var(--muted);
+      font-size: 1rem;
+      border-top: 1px solid #e0e7ff;
+    }
+
+    @media (max-width: 768px) {
+      h1 { font-size: 3rem; }
+      .avatar { width: 150px; height: 150px; bottom: -60px; }
+      .content { padding: 4rem 1.5rem 2.5rem; }
+    }
+  </style>
 </head>
-<h1>T. Chengappa</h1>
-<hr>
-<p>
-<table>
-<td> <img height=120 src="images/CT.jpeg"> </td>
-<td>
-<p>Senior Technical Superintendent </p>
-<p>Department of Physics </p>
+<body>
+  <div class="container">
+    <div class="hero">
+      <h1>T. Chengappa</h1>
+      <div class="role">Senior Technical Superintendent</div>
+      <div class="dept">Department of Physics, IIT Hyderabad</div>
+    </div>
 
-</td>
-</table>
-<p>
-<hr>
-<p>
-<i>Email:</i> chengappa.thumisi@phy.iith.ac.in
-<p>
-<i>Office Phone:</i> +91-40-2301-6900
-<p>
-<i>Office Address:</i> PH-108, I Floor,Department of Physics, IIT Hyderabad, Kandi, Sangareddy-502284 
-<p>
-<hr>
-<p>
-<a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=sharing">My current CV</a>
-<p>
-<a href="https://ctwellthify.github.io/">Books</a>
+    <div class="avatar-wrapper">
+      <img src="images/CT.jpeg" alt="T. Chengappa" class="avatar">
+    </div>
 
-<hr>
-<p>
-<i>Last modified:</i> 21th January, 2026
+    <div class="content">
+      <div class="info-grid">
+        <div class="info-item">
+          <strong>Email</strong>
+          <p><a href="mailto:chengappa.thumisi@phy.iith.ac.in" style="color: var(--accent); text-decoration: none;">chengappa.thumisi@phy.iith.ac.in</a></p>
+        </div>
+        <div class="info-item">
+          <strong>Office Phone</strong>
+          <p>+91-40-2301-6900</p>
+        </div>
+        <div class="info-item">
+          <strong>Office Address</strong>
+          <p>PH-108, I Floor,<br>Department of Physics,<br>IIT Hyderabad, Kandi,<br>Sangareddy - 502284</p>
+        </div>
+      </div>
 
+      <div class="actions">
+        <a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=sharing" class="btn btn-cv" target="_blank" rel="noopener noreferrer">View My Current CV</a>
+        <a href="https://ctwellthify.github.io/" class="btn btn-books" target="_blank" rel="noopener noreferrer">Explore Books Collection</a>
+      </div>
+    </div>
+
+    <div class="footer">
+      Last modified: 21st January 2026
+    </div>
+  </div>
+</body>
+</html>
