--- a/index.html
+++ b/index.html
@@ -3,234 +3,125 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>T. Chengappa | Senior Technical Superintendent, IIT Hyderabad</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <title>T. Chengappa | IIT Hyderabad</title>
+  <link href="https://fonts.googleapis.com/css2?family=Arial:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    :root {
-      --primary: #0d2b4f;
-      --secondary: #1e3a6d;
-      --accent: #00aaff;
-      --light: #f0f4f8;
-      --dark-text: #0f1e3a;
-      --muted: #5a7a9e;
-      --shadow: 0 12px 40px rgba(13, 43, 79, 0.12);
-      --transition: all 0.35s cubic-bezier(0.25, 0.8, 0.25, 1);
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
     body {
-      font-family: 'Roboto', sans-serif;
-      background: linear-gradient(145deg, #e6f0fa 0%, #d9e8f5 100%);
-      color: var(--dark-text);
-      line-height: 1.8;
-      min-height: 100vh;
-      padding: 4rem 1.5rem;
-    }
-
-    .container {
-      max-width: 900px;
-      margin: 0 auto;
-      background: white;
-      border-radius: 24px;
-      overflow: hidden;
-      box-shadow: var(--shadow);
-      position: relative;
-    }
-
-    .hero {
-      background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
-      color: white;
-      text-align: center;
-      padding: 6rem 2rem 4rem;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .hero::before {
-      content: '';
-      position: absolute;
-      top: -50%; left: -50%; right: -50%; bottom: -50%;
-      background: radial-gradient(circle, rgba(255,255,255,0.12) 0%, transparent 60%);
-      pointer-events: none;
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
+      line-height: 1.6;
+      color: #333;
+      background: #fff;
     }
 
     h1 {
-      font-family: 'Cinzel', serif;
-      font-size: 4.2rem;
-      letter-spacing: -1.5px;
-      margin-bottom: 0.8rem;
-      text-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      text-align: center;
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
     }
 
-    .role {
-      font-size: 1.6rem;
-      font-weight: 500;
-      opacity: 0.95;
-      margin-bottom: 0.4rem;
-    }
-
-    .dept {
+    .subtitle {
+      text-align: center;
       font-size: 1.3rem;
-      opacity: 0.85;
-      font-style: italic;
+      color: #555;
+      margin-bottom: 2rem;
     }
 
-    .avatar-wrapper {
-      position: absolute;
-      bottom: -70px;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 10;
+    .profile {
+      text-align: center;
+      margin-bottom: 2rem;
     }
 
-    .avatar {
+    .profile img {
       width: 180px;
       height: 180px;
       border-radius: 50%;
       object-fit: cover;
-      border: 8px solid white;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-      background: #e0e0e0;
-      transition: var(--transition);
+      border: 4px solid #eee;
     }
 
-    .avatar:hover {
-      transform: scale(1.08);
-    }
-
-    .content {
-      padding: 5rem 3rem 3rem;
+    .info {
       text-align: center;
+      margin: 2rem 0;
     }
 
-    .info-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 2.5rem;
-      margin: 3rem 0;
-    }
-
-    .info-item {
-      background: var(--light);
-      padding: 2rem;
-      border-radius: 16px;
-      box-shadow: 0 6px 20px rgba(13,43,79,0.08);
-      transition: var(--transition);
-    }
-
-    .info-item:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 12px 30px rgba(13,43,79,0.14);
-    }
-
-    .info-item strong {
-      display: block;
-      font-size: 1.2rem;
-      color: var(--primary);
-      margin-bottom: 0.8rem;
-      font-weight: 700;
-    }
-
-    .info-item p {
+    .info p {
+      margin: 0.8rem 0;
       font-size: 1.1rem;
-      color: var(--muted);
     }
 
-    .actions {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1.8rem;
-      margin: 4rem 0 3rem;
+    .info strong {
+      color: #0066cc;
     }
 
-    .btn {
-      display: inline-flex;
-      align-items: center;
-      padding: 1rem 2.5rem;
-      font-size: 1.15rem;
-      font-weight: 600;
-      text-decoration: none;
-      border-radius: 50px;
-      transition: var(--transition);
-      box-shadow: 0 6px 20px rgba(0,170,255,0.25);
-    }
-
-    .btn-cv {
-      background: linear-gradient(90deg, #00aaff, #007acc);
-      color: white;
-    }
-
-    .btn-books {
-      background: linear-gradient(90deg, #28a745, #1e7e34);
-      color: white;
-    }
-
-    .btn:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 12px 30px rgba(0,170,255,0.35);
-    }
-
-    .footer {
-      background: #f8f9fb;
-      padding: 2rem;
+    .links {
       text-align: center;
-      color: var(--muted);
-      font-size: 1rem;
-      border-top: 1px solid #e0e7ff;
+      margin: 2.5rem 0;
     }
 
-    @media (max-width: 768px) {
-      h1 { font-size: 3rem; }
-      .avatar { width: 150px; height: 150px; bottom: -60px; }
-      .content { padding: 4rem 1.5rem 2.5rem; }
+    .links a {
+      display: inline-block;
+      margin: 0 1.5rem;
+      padding: 10px 25px;
+      background: #0066cc;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: 600;
+      transition: background 0.3s;
+    }
+
+    .links a:hover {
+      background: #004d99;
+    }
+
+    .links a.books {
+      background: #28a745;
+    }
+
+    .links a.books:hover {
+      background: #218838;
+    }
+
+    footer {
+      text-align: center;
+      color: #777;
+      margin-top: 3rem;
+      font-size: 0.95rem;
+      border-top: 1px solid #eee;
+      padding-top: 1.5rem;
+    }
+
+    @media (max-width: 600px) {
+      h1 { font-size: 2rem; }
+      .profile img { width: 140px; height: 140px; }
+      .links a { margin: 0.8rem 0.5rem; }
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="hero">
-      <h1>T. Chengappa</h1>
-      <div class="role">Senior Technical Superintendent</div>
-      <div class="dept">Department of Physics, IIT Hyderabad</div>
-    </div>
+  <h1>T. Chengappa</h1>
+  <p class="subtitle">Senior Technical Superintendent<br>Department of Physics, IIT Hyderabad</p>
 
-    <div class="avatar-wrapper">
-      <img src="images/CT.jpeg" alt="T. Chengappa" class="avatar">
-    </div>
-
-    <div class="content">
-      <div class="info-grid">
-        <div class="info-item">
-          <strong>Email</strong>
-          <p><a href="mailto:chengappa.thumisi@phy.iith.ac.in" style="color: var(--accent); text-decoration: none;">chengappa.thumisi@phy.iith.ac.in</a></p>
-        </div>
-        <div class="info-item">
-          <strong>Office Phone</strong>
-          <p>+91-40-2301-6900</p>
-        </div>
-        <div class="info-item">
-          <strong>Office Address</strong>
-          <p>PH-108, I Floor,<br>Department of Physics,<br>IIT Hyderabad, Kandi,<br>Sangareddy - 502284</p>
-        </div>
-      </div>
-
-      <div class="actions">
-        <a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=sharing" class="btn btn-cv" target="_blank" rel="noopener noreferrer">View My Current CV</a>
-        <a href="https://ctwellthify.github.io/" class="btn btn-books" target="_blank" rel="noopener noreferrer">Explore Books Collection</a>
-      </div>
-    </div>
-
-    <div class="footer">
-      Last modified: 21st January 2026
-    </div>
+  <div class="profile">
+    <img src="images/CT.jpeg" alt="T. Chengappa">
   </div>
+
+  <div class="info">
+    <p><strong>Email:</strong> <a href="mailto:chengappa.thumisi@phy.iith.ac.in">chengappa.thumisi@phy.iith.ac.in</a></p>
+    <p><strong>Office Phone:</strong> +91-40-2301-6900</p>
+    <p><strong>Office Address:</strong><br>PH-108, I Floor,<br>Department of Physics,<br>IIT Hyderabad, Kandi,<br>Sangareddy - 502284</p>
+  </div>
+
+  <div class="links">
+    <a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=sharing" target="_blank" rel="noopener noreferrer">My Current CV</a>
+    <a href="https://ctwellthify.github.io/" class="books" target="_blank" rel="noopener noreferrer">Books Collection</a>
+  </div>
+
+  <footer>
+    Last modified: 21st January 2026
+  </footer>
 </body>
 </html>
