--- a/index.html
+++ b/index.html
@@ -1,127 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>T. Chengappa | IIT Hyderabad</title>
-  <link href="https://fonts.googleapis.com/css2?family=Arial:wght@400;600&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 20px;
-      line-height: 1.6;
-      color: #333;
-      background: #fff;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>T. Chengappa | IIT Hyderabad</title>
 
-    h1 {
-      text-align: center;
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
+<style>
+body{
+  font-family: Arial, sans-serif;
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 12px;
+  line-height: 1.45;
+  color:#333;
+  background:#fff;
+}
 
-    .subtitle {
-      text-align: center;
-      font-size: 1.3rem;
-      color: #555;
-      margin-bottom: 2rem;
-    }
+h1{
+  text-align:center;
+  font-size:2.2rem;
+  margin-bottom:0.25rem;
+}
 
-    .profile {
-      text-align: center;
-      margin-bottom: 2rem;
-    }
+.subtitle{
+  text-align:center;
+  font-size:1.15rem;
+  color:#555;
+  margin-bottom:1.2rem;
+}
 
-    .profile img {
-      width: 180px;
-      height: 180px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 4px solid #eee;
-    }
+.profile{
+  text-align:center;
+  margin-bottom:1rem;
+}
 
-    .info {
-      text-align: center;
-      margin: 2rem 0;
-    }
+.profile img{
+  width:150px;
+  height:150px;
+  border-radius:50%;
+  object-fit:cover;
+  border:3px solid #eee;
+}
 
-    .info p {
-      margin: 0.8rem 0;
-      font-size: 1.1rem;
-    }
+.info{
+  text-align:center;
+  margin:1rem 0;
+}
 
-    .info strong {
-      color: #0066cc;
-    }
+.info p{
+  margin:0.4rem 0;
+  font-size:1.05rem;
+}
 
-    .links {
-      text-align: center;
-      margin: 2.5rem 0;
-    }
+.info strong{ color:#0066cc; }
 
-    .links a {
-      display: inline-block;
-      margin: 0 1.5rem;
-      padding: 10px 25px;
-      background: #0066cc;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-      font-weight: 600;
-      transition: background 0.3s;
-    }
+.links{
+  text-align:center;
+  margin:1.4rem 0;
+}
 
-    .links a:hover {
-      background: #004d99;
-    }
+.links a{
+  display:inline-block;
+  margin:0 0.7rem;
+  padding:7px 18px;
+  background:#0066cc;
+  color:#fff;
+  text-decoration:none;
+  border-radius:4px;
+  font-weight:600;
+}
 
-    .links a.books {
-      background: #28a745;
-    }
+.links a.books{ background:#28a745; }
 
-    .links a.books:hover {
-      background: #218838;
-    }
+.links a:hover{ opacity:0.9; }
 
-    footer {
-      text-align: center;
-      color: #777;
-      margin-top: 3rem;
-      font-size: 0.95rem;
-      border-top: 1px solid #eee;
-      padding-top: 1.5rem;
-    }
+footer{
+  text-align:center;
+  color:#777;
+  margin-top:1.5rem;
+  font-size:0.9rem;
+  border-top:1px solid #eee;
+  padding-top:0.8rem;
+}
 
-    @media (max-width: 600px) {
-      h1 { font-size: 2rem; }
-      .profile img { width: 140px; height: 140px; }
-      .links a { margin: 0.8rem 0.5rem; }
-    }
-  </style>
+@media(max-width:600px){
+  h1{font-size:1.9rem;}
+  .profile img{width:130px;height:130px;}
+  .links a{margin:0.4rem;}
+}
+</style>
 </head>
+
 <body>
-  <h1>T. Chengappa</h1>
-  <p class="subtitle">Senior Technical Superintendent<br>Department of Physics, IIT Hyderabad</p>
 
-  <div class="profile">
-    <img src="images/CT.jpeg" alt="T. Chengappa">
-  </div>
+<h1>T. Chengappa</h1>
+<p class="subtitle">
+Senior Technical Superintendent<br>
+Department of Physics, IIT Hyderabad
+</p>
 
-  <div class="info">
-    <p><strong>Email:</strong> <a href="mailto:chengappa.thumisi@phy.iith.ac.in">chengappa.thumisi@phy.iith.ac.in</a></p>
-    <p><strong>Office Phone:</strong> +91-40-2301-6900</p>
-    <p><strong>Office Address:</strong><br>PH-108, I Floor,<br>Department of Physics,<br>IIT Hyderabad, Kandi,<br>Sangareddy - 502284</p>
-  </div>
+<div class="profile">
+<img src="images/CT.jpeg" alt="T. Chengappa">
+</div>
 
-  <div class="links">
-    <a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=sharing" target="_blank" rel="noopener noreferrer">My Current CV</a>
-    <a href="https://ctwellthify.github.io/" class="books" target="_blank" rel="noopener noreferrer">Books Collection</a>
-  </div>
+<div class="info">
+<p><strong>Email:</strong> <a href="mailto:chengappa.thumisi@phy.iith.ac.in">chengappa.thumisi@phy.iith.ac.in</a></p>
+<p><strong>Office Phone:</strong> +91-40-2301-6900</p>
+<p><strong>Office Address:</strong><br>
+PH-108, I Floor,<br>
+Department of Physics,<br>
+IIT Hyderabad, Kandi,<br>
+Sangareddy – 502284</p>
+</div>
 
-  <footer>
-    Last modified: 21st January 2026
-  </footer>
+<div class="links">
+<a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=sharing" target="_blank">My Current CV</a>
+<a href="https://ctwellthify.github.io/" class="books" target="_blank">Books Collection</a>
+</div>
+
+<footer>
+Last modified: 21st January 2026
+</footer>
+
 </body>
 </html>
