--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Sangareddy – 502284</p>
 
 <div class="links">
 <a href="https://drive.google.com/file/d/1SrYZ2KLsbR39Nst0grIYUYWcX4MIAGPQ/view?usp=sharing" target="_blank">My Current CV</a>
-<a href="https://ctwellthify.github.io/" class="books" target="_blank">Books Collection</a>
+<a href="https://www.google.com/" class="books" target="_blank">Books Collection</a>
 </div>
 
 <footer>
